# kinect_ir_rgb_streamer

./: CMakeLists.txt  README.md  package.xml
launch/: kinect_ir_rgb_streamer.launch
src/: kinect_ir_rgb_streamer.cpp
